# desktop-agent

./: Cargo.toml
src/: connection.rs  main.rs
src/api/: auth.rs  mod.rs  session.rs  state.rs
src/gui/: mod.rs  state.rs
src/models/: auth.rs  events.rs  mod.rs  session.rs  state.rs  websocket.rs
src/websocket/: mod.rs
