[package]
name = "desktop-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
egui = "0.30.0"
enigo = { version = "0.3.0", features = ["libei", "serde", "wayland", "x11rb"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
